tests/errors/runtime.NotEnoughArguments.1.art
hello: "hello"
print
print "hello"
print 2